
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct dce_i2c_hw {int dummy; } ;


 int DC_I2C_ARBITRATION ;
 int DC_I2C_DDC1_HW_STATUS ;
 int DC_I2C_REG_RW_CNTL_STATUS ;
 unsigned int DC_I2C_REG_RW_CNTL_STATUS_DMCU_ONLY ;
 unsigned int DC_I2C_STATUS__DC_I2C_STATUS_USED_BY_HW ;
 int HW_STATUS ;
 int REG_GET (int ,int ,unsigned int*) ;

__attribute__((used)) static bool is_engine_available(struct dce_i2c_hw *dce_i2c_hw)
{
 unsigned int arbitrate;
 unsigned int i2c_hw_status;

 REG_GET(HW_STATUS, DC_I2C_DDC1_HW_STATUS, &i2c_hw_status);
 if (i2c_hw_status == DC_I2C_STATUS__DC_I2C_STATUS_USED_BY_HW)
  return 0;

 REG_GET(DC_I2C_ARBITRATION, DC_I2C_REG_RW_CNTL_STATUS, &arbitrate);
 if (arbitrate == DC_I2C_REG_RW_CNTL_STATUS_DMCU_ONLY)
  return 0;

 return 1;
}
