; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/dce/extr_dce_i2c_hw.c_is_engine_available.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/dce/extr_dce_i2c_hw.c_is_engine_available.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dce_i2c_hw = type { i32 }

@HW_STATUS = common dso_local global i32 0, align 4
@DC_I2C_DDC1_HW_STATUS = common dso_local global i32 0, align 4
@DC_I2C_STATUS__DC_I2C_STATUS_USED_BY_HW = common dso_local global i32 0, align 4
@DC_I2C_ARBITRATION = common dso_local global i32 0, align 4
@DC_I2C_REG_RW_CNTL_STATUS = common dso_local global i32 0, align 4
@DC_I2C_REG_RW_CNTL_STATUS_DMCU_ONLY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dce_i2c_hw*)* @is_engine_available to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_engine_available(%struct.dce_i2c_hw* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.dce_i2c_hw*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.dce_i2c_hw* %0, %struct.dce_i2c_hw** %3, align 8
  %6 = load i32, i32* @HW_STATUS, align 4
  %7 = load i32, i32* @DC_I2C_DDC1_HW_STATUS, align 4
  %8 = call i32 @REG_GET(i32 %6, i32 %7, i32* %5)
  %9 = load i32, i32* %5, align 4
  %10 = load i32, i32* @DC_I2C_STATUS__DC_I2C_STATUS_USED_BY_HW, align 4
  %11 = icmp eq i32 %9, %10
  br i1 %11, label %12, label %13

12:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %22

13:                                               ; preds = %1
  %14 = load i32, i32* @DC_I2C_ARBITRATION, align 4
  %15 = load i32, i32* @DC_I2C_REG_RW_CNTL_STATUS, align 4
  %16 = call i32 @REG_GET(i32 %14, i32 %15, i32* %4)
  %17 = load i32, i32* %4, align 4
  %18 = load i32, i32* @DC_I2C_REG_RW_CNTL_STATUS_DMCU_ONLY, align 4
  %19 = icmp eq i32 %17, %18
  br i1 %19, label %20, label %21

20:                                               ; preds = %13
  store i32 0, i32* %2, align 4
  br label %22

21:                                               ; preds = %13
  store i32 1, i32* %2, align 4
  br label %22

22:                                               ; preds = %21, %20, %12
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}

declare dso_local i32 @REG_GET(i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
